--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'EquipmentPro';
   src: url('../src/assets/font/EquipmentPro.eot'),
        url('../src/assets/font/EquipmentPro.woff') format('woff'),
@@ -6,4 +6,16 @@
        url('../src/assets/font/EquipmentPro.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
+} */
+
+body{
+  background: #000;
+  padding: 0px;
+  margin: 0px;
+}
+
+input{
+  font-size: 12px;
+  visibility: visible;
+  z-index: 1;
 }
