--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,13 @@
   font-style: normal;
 } */
 
-body{
+body {
   background: #000;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
-input{
+input {
   font-size: 12px;
   visibility: visible;
   z-index: 1;
