Add Input in-game to save score instead of window.prompt

--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,27 @@ input {
   visibility: visible;
   z-index: 1;
 }
+
+.myButton {
+	box-shadow:inset 0px 1px 0px 0px #a6827e;
+	background:linear-gradient(to bottom, #E41746 5%, #EB3D64 100%);
+	background-color:#E41746;
+	border-radius:3px;
+	border:1px solid #EB3D64;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #4d3534;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom,  #E41746 5%, #EB3D64 100%);
+	background-color:#634b30;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
