--- a/src/style.css
+++ b/src/style.css
@@ -21,25 +21,27 @@ input {
 }
 
 .myButton {
-	box-shadow:inset 0px 1px 0px 0px #a6827e;
-	background:linear-gradient(to bottom, #E41746 5%, #EB3D64 100%);
-	background-color:#E41746;
-	border-radius:3px;
-	border:1px solid #EB3D64;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #4d3534;
+  box-shadow: inset 0 1px 0 0 #a6827e;
+  background: linear-gradient(to bottom, #e41746 5%, #eb3d64 100%);
+  background-color: #e41746;
+  border-radius: 3px;
+  border: 1px solid #eb3d64;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #4d3534;
 }
+
 .myButton:hover {
-	background:linear-gradient(to bottom,  #E41746 5%, #EB3D64 100%);
-	background-color:#634b30;
+  background: linear-gradient(to bottom, #e41746 5%, #eb3d64 100%);
+  background-color: #634b30;
 }
+
 .myButton:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
